# MinidumpAnalyzer

./: .gitignore  Cargo.toml  README.md  download_symbols.sh
.claude/skills/: minidump-analyzer.md
.github/workflows/: ci.yml
mcp/: Cargo.toml
mcp/src/: main.rs
src/: analyzer.rs  lib.rs  main.rs  symbols.rs
src/channel/: android.rs  ios.rs  mod.rs  pc.rs
