[workspace]
members = [".", "mcp"]

[package]
name = "minidump-analyzer"
version = "0.1.0"
edition = "2024"

[lib]
name = "minidump_analyzer"
path = "src/lib.rs"

[dependencies]
minidump = "0.16"
minidump-processor = { version = "0.16", features = ["dump_syms"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
reqwest = "0.12"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"