[package]
name = "minidump-analyzer-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
minidump-analyzer = { path = ".." }
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
